cmake_minimum_required(VERSION 3.5)

enable_language(Fortran)

set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O2 -fconvert=big-endian")
link_libraries(${LAPACK_LIBRARIES})
link_directories(../../sys/lib)

add_executable(ensmspr ensmspr.f90)
target_link_libraries(ensmspr common)
add_executable(calcte calcte.f90)
target_link_libraries(calcte common)
add_executable(spectra spectra.f90)
target_link_libraries(spectra common)
add_executable(similarity similarity.f90)
target_link_libraries(similarity common)
add_executable(calctegrd calctegrd.f90)
target_link_libraries(calctegrd common)
add_executable(calctesprd calctesprd.f90)
target_link_libraries(calctesprd common)
include_directories(${CMAKE_BINARY_DIR}/mod/common)
